# constrained_decoding_slides

./: .gitignore  index.html
demo/: 00_json_schema.ipynb  02_broken_tool_call.py  03_dictionary_support.py  04_sql_lark_grammar.py  cd_support.ipynb  dictionary_support.py  json_mode.py  lexer-parser.py  lexer_parser.py  lookup_table.py  pyproject.toml  python.lark  python_lark_grammar.py  sql_lark_grammar.py
slides/: TOC.MD  beyond_json.md  evolution.md  hook.md  outline.md  practical_considerations.md  problem.md  resources.md  summary.md  timeline.md  under_the_hood.md  use_cases.md
