[project]
name = "demo"
version = "0.1.0"
description = "constrained decoding demo"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-openai>=1.1.4",
    "langchain-google-genai>=4.1.1",
    "rich>=14.3.1",
    "dotenv>=0.9.9",
]
